Update RequestManager.java